2016-06-28  Dave Pitts <dpitts@cozx.com>

	* cobc.c: Added symbol listing support for LINKAGE and SCREEN sections.
	* pplex.l, cobc.c, tree.c: Fixed compile warnings.

2016-07-18  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (screen_or_device_display): changed permitted DISPLAY
	  combinations (to follow Micro Focus). Now screens must have their own,
	  individual displays and cannot be mixed with the display of
	  non-screens on CRT. CRT and non-CRT displays can no longer be mixed.
	* parser.y, typeck.c: added support for LINE/COLUMN/AT 0 and removed
	  requirement of LINE/COLUMN clause on CRT displays.
	* config.def: added accept-display-extensions to enable/disable
	  the above and any other non-standard extensions.
	* config.def: added console-is-crt to set the default DISPLAY/ACCEPT
	  device to CRT (for ACUCOBOL).
	* parser.y (accept_statement): fixed bug where context-sensitive words
	  were not detected.

2016-07-17 Brian Tiffin <btiffin@gnu.org>

	* codegen.c: when emitting source for a function entry, if cob_call_params
	  is zero, and cob_module is not set, set cob_call_params to the number of
	  arguments in GnuCOBOL using_list. Need to document that C can't call a
	  GnuCOBOL function with zero arguments if GnuCOBOL expects at least one,
	  even if all are optional from the GnuCOBOL perspective.  Except for that
	  edge case, this fixes bug #208 (and possibly others).
	* codegen.c: allow for ENTRY lookup inside main module.

2016-07-15  Edward Hart <edward.dan.hart@gmail.com>

	* scanner.l, pplex.l: fixed bug #269. GnuCOBOL now gobbles redundant
	  periods, instead of releasing them to the parser.

2016-07-15 Brian Tiffin <btiffin@gnu.org>

	* codegen.c: correction to exception code tested for ACCEPT ON EXCEPTION

2016-07-10  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, scanner.l, tree.h: fixed bug #270 by only returning
	  PROGRAM_NAME's from scanner inside the identification division.
