@@ -3653,6 +3653,10 @@ force_new_page_for_next_line (void)
 static void
 print_program_trailer (void)
 {
+	struct cb_program	*p;
+	struct cb_program	*q;
+	int			 print_names = 0;
+
 	if (!cb_src_list_file) {
 		return;
 	}
@@ -3664,12 +3668,26 @@ print_program_trailer (void)
 	force_new_page_for_next_line ();
 	print_program_header ();
 
-	print_files_and_their_records (current_program->file_list);
-	print_fields_in_section (current_program->working_storage);
-	print_fields_in_section (current_program->local_storage);
-	print_fields_in_section (current_program->linkage_storage);
-	print_fields_in_section (current_program->screen_storage);
-	print_fields_in_section (current_program->report_storage);
+	p = current_program;
+	if (p->next_program) {
+		print_names = 1;
+	}
+
+	for (q = p; q; q = q->next_program) {
+		if (print_names) {
+			print_program_header ();
+			fprintf (cb_src_list_file, "     %-14s      %s\n",
+			 	 (q->prog_type == CB_FUNCTION_TYPE ?
+				 	"FUNCTION" : "PROGRAM"),
+			 	 q->program_name);
+		}
+		print_files_and_their_records (q->file_list);
+		print_fields_in_section (q->working_storage);
+		print_fields_in_section (q->local_storage);
+		print_fields_in_section (q->linkage_storage);
+		print_fields_in_section (q->screen_storage);
+		print_fields_in_section (q->report_storage);
+	}
 
 	/* Print error counts */
 
@@ -4765,12 +4783,13 @@ process_translate (struct filename *fn)
 	cb_listing_files = cb_listing_files->next;
 	free (cfile);
 
+	/* Print program trailer */
+	print_program_trailer();
+
 	if (ret) {
-		print_program_trailer ();
 		return 1;
 	}
 	if (cb_flag_syntax_only || current_program->entry_list == NULL) {
-		print_program_trailer ();
 		return 0;
 	}
 
@@ -4862,9 +4881,6 @@ process_translate (struct filename *fn)
 	errorcount = 0;
 	/* Translate to C */
 	codegen (p, 0);
-
-	/* Print program trailer */
-	print_program_trailer();
 
 	/* Close files */
 	if(unlikely(fclose (cb_storage_file) != 0)) {
